--- a/DPW - Parte 05 - HTML - Revisão/revisao_01/css/style.css
+++ b/DPW - Parte 05 - HTML - Revisão/revisao_01/css/style.css
@@ -5,15 +5,17 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
 div {
-    margin:  0 0 20px 20px;
+    margin: 0 0 20px 20px;
 }
 
-.poesia-colorida pre span:nth-child(1), .poesia-colorida pre span:nth-child(2) {
+.poesia-colorida pre span:nth-child(1),
+.poesia-colorida pre span:nth-child(2) {
     color: red;
     background-color: yellow;
 }
@@ -55,7 +57,9 @@ div {
     list-style-position: inside;
 }
 
-.tabela table, .tabela table tr th, .tabela table tr td {
+.tabela table,
+.tabela table tr th,
+.tabela table tr td {
     padding: 5px;
     border: 1px solid black;
     border-collapse: collapse;
@@ -65,10 +69,13 @@ div {
     color: red;
 }
 
-.tabela table tr:nth-of-type(5) td:nth-child(3), .tabela table tr:nth-of-type(6) td:nth-child(3) {
+.tabela table tr:nth-of-type(5) td:nth-child(3),
+.tabela table tr:nth-of-type(6) td:nth-child(3) {
     color: red;
 }
 
-table tr:nth-of-type(2n), table tr:nth-of-type(1), table tr:nth-of-type(7) {
+table tr:nth-of-type(2n),
+table tr:nth-of-type(1),
+table tr:nth-of-type(7) {
     background-color: rgb(133, 166, 219);
 }
