--- a/DPW - Parte 07 - CSS - Seletores, Atributos, Pseudo-Classes e Pseudo-elementos/exercicio/css/style.css
+++ b/DPW - Parte 07 - CSS - Seletores, Atributos, Pseudo-Classes e Pseudo-elementos/exercicio/css/style.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
 div {
-    margin:  0 0 20px 20px;
+    margin: 0 0 20px 20px;
 }
 
 .lista-icones-unicode ul {
